# greenbat

./: .gitignore  alembic.ini  greenbat.cfg.toml  pyproject.toml
greenbat/: __main__.py  app.py  auth.py  config.py  dependencies.py  description.md
greenbat/database/: base.py  engine.py  enums.py  types.py
greenbat/database/alembic/: env.py  script.py.mako
greenbat/database/alembic/versions/: 76ddcd611f49_.py  8bd6940c3fcd_.py  b2397a61111e_.py  d4746548af4e_.py  eef97a1b71bc_.py
greenbat/database/tables/: __init__.py  _base.py  accounts_steam.py  element.py  elements.py  game.py  games.py  metadata_custom.py  metadata_steam.py  steam.py  user.py  users.py
greenbat/models/: __init__.py  _base.py  _types.py  a_basic.py  b_detailed.py  edit.py  get.py  retrieve.py
greenbat/routes/: README.rst  elements.py  example.py  games.py  games_all.py  games_custom.py  games_steam.py  match.py  users.py
greenbat/tests/: conftest.py
greenbat/utils/: indoc.py  queries.py
